# hsds

./: .env  .gitignore  .readthedocs.yml  .travis.yml  CITATION.cff  Dockerfile  Dockerfile.lambda  LICENSE  MANIFEST.in  Pipfile  README.md  build.sh  create_tlds  create_users  dcos_dn.json  dcos_sn.json  docker-compose-internal-lb.yml  docker-compose.local.yml  docker-compose.openio.yml  docker-compose.posix.yml  docker-compose.secure.yml  docker-compose.yml  entrypoint.sh  funding.json  k8s.yml  k8s_deployment.yml  k8s_deployment_aws.yml  k8s_deployment_azure.yml  k8s_deployment_posix.yml  k8s_make_configmap.sh  k8s_make_secrets.sh  k8s_make_secrets_azure.sh  k8s_service.yml  k8s_service_lb.yml  k8s_service_lb_azure.yml  lambda_build.sh  lambda_function.py  local.env  nginx.tmpl  passwd.txt  (+15 more)
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yaml  override.env
.github/: FUNDING.yml
.github/.well-known/: funding-manifest-urls
.github/workflows/: codeql-analysis.yml  dependency-review.yml  docker-image.yml  python-package.yml
admin/: get_s3_stats.py
admin/aws/: config.py  create_dynamodb_usrs.sh  create_instance.py  get_s3json.py  list_instances.py
admin/config/: config.yml  dump_config.py  groups.default  krb5.conf  override.yml  passwd.default
admin/dcos/: dcos_headnode.json
admin/docker/: docker-compose-internal-lb.yml  docker-compose.aws.yml  docker-compose.azure.yml  docker-compose.openio.yml  docker-compose.posix.yml  docker-compose.yml
admin/ecs/: README.md  buildecr.sh  runecs.sh
admin/kubernetes/: k8s_deployment.yml  k8s_deployment_aws.yml  k8s_deployment_aws_singleton.yml  k8s_deployment_azure.yml  k8s_deployment_azure.yml.bak  k8s_deployment_john.yml  k8s_deployment_posix.yml  k8s_make_configmap.sh  k8s_make_secrets.sh  k8s_rbac.yml  k8s_service_lb.yml
admin/nrel_config/: run.sh
admin/systemd/: README.rst  hsds_dn.service  hsds_head.service  hsds_sn.service  run.sh  run_dn.sh  run_head.sh  run_sn.sh
admin/tools/: get_s3_stats.py  run_cadvisor.sh
awslambda/: build.sh  deploy.sh
awslambda/chunkread/: build.sh  chunkread.py  config.py  hsds_logger.py  lambda_function.py  readHyperslabTest.py
docs/: authentication.md  authorization.md  authorization.rst  aws_lambda_setup.md  aws_lambda_setup.rst  azure_ad_setup.md  azure_ad_setup.rst  conf.py  contributing.rst  docker_install.md  docker_install.rst  docker_install_aws.md  docker_install_aws.rst  docker_install_azure.md  docker_install_azure.rst  docker_install_dcos.md  docker_install_dcos.rst  docker_install_openio.md  docker_install_posix.md  docker_install_posix.rst  docker_install_tencent.md  docker_install_tencent.rst  faq.rst  frontdoor_install_azure.md  frontdoor_install_azure.rst  index.rst  install.rst  keycloak_setup.md  kubernetes_install.md  kubernetes_install_aws.md  kubernetes_install_aws.rst  kubernetes_install_azure.md  kubernetes_install_azure.rst  post_install.md  post_install.rst  quick.rst  requirements-rtd.txt  setup_docker.md  setup_docker.rst  test_data_setup.rst
docs/advanced/: authorization.rst  azure_ad_setup.rst  frontdoor_install_azure.rst  keycloak_setup.rst
docs/design/: obj_store_schema.md  obj_store_schema.rst
docs/install/: docker_install_azure.rst  introduction.rst  kubernetes_install_aws.rst  post_install.rst
docs/restapi/: openapi.yaml  openapi_lint.sh  restapi.rst
docs/usecases/: Makefile  extract_one_dimensional_subset.rst  extract_several_one_dimensional_subsets.rst  extract_subsets_with_shared_common_dimensions.rst  extract_three_dimensional_subset.rst  extract_two_dimensional_subset.rst  into.rst  intro.rst  view_end-point_metadata.rst
docs/whatsnew/: index.rst
examples/h5py/: climanim.py  datencutil.py  exampleurls.txt  probeclimh5.py  runprobes.sh  spawnprobes.py  spawnprobes_eg.cnf  urls-h5srv.tst.txt  urls.tst.txt
hsds/: app.py  async_lib.py  asyncnode.py  asyncnode_lib.py  attr_dn.py  attr_sn.py  authUtil.py  basenode.py  bucket_check.py  bucket_check.sh  bucket_scan.py  chunk_crawl.py  chunk_dn.py  chunk_lib.py  chunk_sn.py  chunklocator.py  config.py  create_toplevel_domain_json.py  ctype_dn.py  ctype_sn.py  datanode.py  datanode_lib.py  delete_bucket.py  domainUtil.py  domain_crawl.py  domain_dn.py  domain_sn.py  dset_dn.py  dset_lib.py  dset_sn.py  folder_crawl.py  get_s3json.py  group_dn.py  group_sn.py  headnode.py  hsdsUtil.py  hsds_app.py  hsds_logger.py  link_dn.py  link_sn.py  (+9 more)
hsds/tools/: bucket_check.sh  bucket_scan.py  create_toplevel_domain_json.py  delete_bucket.py  get_s3json.py  list_objects.py  root_delete.py  root_scan.py
hsds/util/: __init__.py  arrayUtil.py  attrUtil.py  authUtil.py  awsLambdaClient.py  azureBlobClient.py  boolparser.py  chunkCache.py  chunkUtil.py  dbutil.py  domainUtil.py  dsetUtil.py  fileClient.py  globparser.py  hdf5dtype.py  httpUtil.py  idUtil.py  jwtUtil.py  k8sClient.py  linkUtil.py  lruCache.py  memClient.py  nodeUtil.py  query_marathon.py  rangegetUtil.py  s3Client.py  s3Util.py  storUtil.py  timeUtil.py
sqlite/: config.py  dbutil.py  getdomaininfo.py  getkey.py  gettopleveldomains.py  hsds_logger.py  maketable.py  rebuild_db.py
sqlite/util/: domainUtil.py  idUtil.py  s3Util.py
tests/integ/: acl_test.py  attr_test.py  broadcast_test.py  config.py  dataset_test.py  datatype_test.py  domain_test.py  filter_test.py  group_test.py  headtest.py  helper.py  helper_test.py  link_test.py  pointsel_test.py  query_test.py  rangeget_test.py  reqsize.py  run_head.sh  sample-shuffle-data.json  setup_test.py  snp500.json  tall.json  uptest.py  value_test.py  vlen_test.py
tests/k8s/: k8s_app_label.yml.template  k8s_label_selector.yml.template  k8s_label_selector_test.py
tests/lambda/: config.yml  lambdaTest.py
tests/unit/: arrayUtilTest.py  array_util_test.py  boolParserTest.py  config.py  (+23 more)
tools/: bucket_check.py  bucket_scan.py  create_toplevel_domain_json.py  delete_bucket.py  domain_check.py  get_chunk_values.py  get_pod_ips.py  get_s3json.py  get_s3perf.py  lambda_log_filter.py  link_mod.py  list_objects.py  root_delete.py  root_scan.py  status_check.py  stor_check.py
(+158 files in other folders)
